# siloka-ml-gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pre-production.sh  production_requirements.txt  pyproject.toml  requirements.txt
app/: main.py  ml_model.py  utils.py
model/: tokenizer.pickle
